--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -166,6 +166,10 @@ on boot
     setprop vendor.usb.qdss.inst.name "qdss"
     setprop sys.usb.configfs 1
 
+# Touchpanel
+    chmod 0664 /sys/devices/virtual/touch/touch_dev/double_tap
+    chown system system /sys/devices/virtual/touch/touch_dev/double_tap
+
 #Give bk03 partition 0666 permissions, only in the ato version
 on boot && property:ro.factory_mode=1
 	chmod 0666 /dev/block/sde54
