--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -43,9 +43,8 @@ hostNSOffload=1
 # 802.11n Protection flag
 gEnableApProt=1
 
-#Chk16859 huzhiqiang 20190308 modify Bingup checklist
 #Enable OBSS protection
-gEnableApOBSSProt=0
+gEnableApOBSSProt=1
 
 #Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
@@ -60,7 +59,7 @@ gFixedRate=0
 # gFragmentationThreshold=2346
 
 # RTS threshold
-#RTSThreshold=1048576
+RTSThreshold=1048576
 
 # Intra-BSS forward
 gDisableIntraBssFwd=0
@@ -75,7 +74,7 @@ g11dSupportEnabled=0
 g11hSupportEnabled=1
 
 # DFS Master Capability
-gEnableDFSMasterCap=1
+gEnableDFSMasterCap=0
 
 # ESE Support and fast transition
 EseEnabled=0
@@ -217,6 +216,9 @@ gEnableTxSUBeamformer=1
 
 gEnableFastRoamInConcurrency=1
 
+#Enable/Disable PER based roaming
+gper_roam_enabled=0
+
 #Maxium Channel time in msec
 gMaxMediumTime = 6000
 
@@ -258,7 +260,7 @@ gVhtMpduLen=2
 gEnableMCCAdaptiveScheduler=1
 
 #Enable or Disable p2p device address administered
-isP2pDeviceAddrAdministrated=0
+isP2pDeviceAddrAdministrated=1
 
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
@@ -293,7 +295,9 @@ gMaxConcurrentActiveSessions=3
 
 # Disable/Enable GreenAP
 # 0 to disable, 1 to enable, default: 1
-gEnableGreenAp=0
+gEnableGreenAp=1
+
+gIgnorePeerErpInfo=1
 
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
@@ -307,9 +311,8 @@ gEnableLpassSupport=1
 # Whether userspace country code setting shld have priority
 gCountryCodePriority=1
 
-#Chk20572 huzhiqiang 20190308 modify Bingup checklist
 # Enable(1)/Disable(0) SIFS burst
-gEnableSifsBurst=3
+gEnableSifsBurst=1
 
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
@@ -322,19 +325,6 @@ gSapSccChanAvoidance=0
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
 gIbssTxSpEndInactivityTime=10
-
-# Enable support for TDLS
-#  0 - disable
-#  1 - enable
-gEnableTDLSSupport=1
-
-# Enable support for Implicit Trigger of TDLS. That is, wlan driver shall
-# initiate TDLS Discovery towards a peer whenever setup criteria (throughput
-# and RSSI) is met and then will initiate teardown when teardown criteria
-# (idle packet count and RSSI) is met.
-#  0 - disable
-#  1 - enable
-gEnableTDLSImplicitTrigger=1
 
 # Enable TDLS External Control. That is, user space application has to
 # first configure a peer MAC in wlan driver towards which TDLS is desired.
@@ -445,36 +435,13 @@ gEnablePeerUnmapConfSupport=1
 
 ################ Datapath feature set End ################
 
-################ExtR HONGMI-59465 set start ###################
-RTSThreshold=2346
-gRoamPrefer5GHz=1
-gSelect5GHzMargin=3
-roam_bad_rssi_thresh_offset_2g=0
-roam_bg_scan_bad_rssi_thresh=-76
-gStaKeepAlivePeriod = 30
-gEnablePacketLog=1
-gEnableModulatedDTIM=3
-gMaxLIModulatedDTIM=3
-groam_dense_rssi_thresh_offset=5
-gtraffic_threshold=50
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-gper_roam_enabled=3
-arp_ac_category=0
-gEnableSelfRecovery=1
-enable_ftopen=0
-################ExtR HONGMI-59465 set end ###################
-
-#ExtB HONGMI-59430 huzhiqiang 20190419 add disable RTT for android.net.wifi.rtt.cts.wifiRttTest
-gEnableRTTSupport=0
-
 ################ NAN feature set start ###################
 
 # Enable NAN discovery (NAN 1.0)
 # 1 - enable  0 - disable(default)
-gEnableNanSupport=1
+gEnableNanSupport=0
 # Enable NAN Datapath
-genable_nan_datapath=1
+genable_nan_datapath=0
 
 ################ NAN feature set end #####################
 
@@ -491,26 +458,30 @@ MAWCEnabled=0
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
 
-#Enable/Disable SNR monitoring
-gEnableSNRMonitoring=1
+# Enable/Disable SNR monitoring
+gEnableSNRMonitoring=0
 
-#ExtR HOMGMI-61658,sunbin1.wt, add, 20190523,modify the 2.g scan time as 40ms
-active_max_channel_time_2g=40
+#Enable/Disable Ring Buffer
+gEnableRingBuffer=0
 
-#ExtR HOMGMI-61157,sunbin1.wt, add, 20190628,disable the OCE
-oce_sta_enable=0
+# Packet Log buffer size
+PktlogBufSize=1
 
-#ExtR HONGMI-71703,yangzy1123.wt, add, 20191125,set gEnableLPRx to 0
-gEnableLPRx=0
+# Enable SRD channel
+etsi13_srd_chan_in_master_mode=1
 
-#ExtR HONGMI-74117,yangzy1123.wt, add, 20200309,Enable sap in indoor channel
-gindoor_channel_support=1
-
-#Add another interface while driver load
+# Add another interface while driver load
 gEnableConcurrentSTA=wlan1
 
-#ExtR HONGMI-74117,yangzy1123.wt, add, 20200309,Enable ETSI SRD channels in master mode PCL and ACS functionality
-etsi13_srd_chan_in_master_mode=1
+# 1 - Enable the host silent recovery
+# 0 - Disable the host silent recovery
+gEnableSelfRecovery=1
+
+avoid_list_expiry_time=5
+black_list_expiry_time=1
+bad_bssid_counter_thresh=10
+gEnablePacketLog=0
+gEnableDebugLog=0x0
 
 END
 
