--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -506,6 +506,9 @@ gEnableLPRx=0
 #ExtR HONGMI-74117,yangzy1123.wt, add, 20200309,Enable sap in indoor channel
 gindoor_channel_support=1
 
+#Add another interface while driver load
+gEnableConcurrentSTA=wlan1
+
 #ExtR HONGMI-74117,yangzy1123.wt, add, 20200309,Enable ETSI SRD channels in master mode PCL and ACS functionality
 etsi13_srd_chan_in_master_mode=1
 
