--- a/rootdir/etc/ueventd.rc
+++ b/rootdir/etc/ueventd.rc
@@ -482,3 +482,6 @@ firmware_directories /vendor/firmware_mnt/image/
 
 # HBM
 /sys/devices/platform/soc/soc:qcom,dsi-display          hbm                             0660	system	system
+
+# Double tap
+/sys/devices/virtual/touch/touch_dev/double_tap 0660 system input
