laurel_sprout: use the right path for dt2w

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -167,8 +167,8 @@ on boot
     setprop sys.usb.configfs 1
 
 # Touchpanel
-    chmod 0664 /sys/devices/virtual/touch/touch_dev/double_tap
-    chown system system /sys/devices/virtual/touch/touch_dev/double_tap
+    chmod 0664 /dev/input/event2
+    chown system system /dev/input/event2
 
 #Give bk03 partition 0666 permissions, only in the ato version
 on boot && property:ro.factory_mode=1
